--- a/sass/main.scss
+++ b/sass/main.scss
@@ -280,10 +280,12 @@ h2 {
     .fa-heart {
         position: absolute;
         right: 0px;
+        vertical-align: text-top;
     }
 
     h1 {
         font-family: $brand-font;
+        width: 90%;
 
         @media only screen and (min-width: 769px) {
             margin-right: 30px;
@@ -331,6 +333,7 @@ h2 {
     &__info {
         padding: 15px;
         width: 100%;
+        box-sizing: border-box;
 
         div {
             display: flex;
@@ -344,6 +347,8 @@ h2 {
             margin-block-start: 0;
             margin-block-end: 0;
             @include ellipsis;
+            transition-duration: 630ms;
+            max-width: 80%;
         }
 
     }
@@ -351,6 +356,7 @@ h2 {
     &__description {
         @include ellipsis;
         max-width: 80%;
+        transition-duration: 630ms;
     }
 
     &-type h2 {
@@ -406,12 +412,16 @@ h2 {
 
         .plate__price {
             transform: translateX(-12vw);
-            transform-origin: left;
         }
 
         .fa-circle-check {
             transition: transform 630ms ease-in-out;
             transform: rotate(360deg);
+        }
+
+        .plate__info h3, .plate__description {
+            width: 70%;
+            transition: width 630ms;
         }
     }
     
